# data-analysis

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: audits.py  auth.py  chat.py  conversations.py  datasources.py  deps.py  export.py  files.py  health.py  qa.py  schema.py  scopes.py  sql.py
backend/app/core/: audit.py  config.py  datasources.py  llm.py  logging.py  mysql.py  qa_docs.py  resilience.py  schema_monitor.py  security.py  sqlite_store.py  sse.py  training.py  uploads.py  vectorstore.py
backend/app/schemas/: auth.py  chat.py  sql.py
backend/app/services/: analyzer.py  charting.py  schema_context.py  sql_assistant.py  sql_generator.py
frontend/: app.js  index.html  qa_template.csv  sample.csv  styles.css
